instead of maven-jlink-plugin the maven-exec-plugin is used